--- a/manifest.json
+++ b/manifest.json
@@ -44,7 +44,7 @@
           "type": "image/png"
         }
       ],
-    "start_url": "/home",
+    "start_url": "/index",
     "background_color": "#AA076B",
     "display": "standalone",
     "scope": "/",
